--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="w-full border-b border-[#3f3f46]"></div>
             <div class="flex-col w-full p-4 space-y-3 text-sm text-gray-500">
-                <button
+                <button onclick="window.open('https://github.com/extenv','_blank')"
                     class="w-full text-white hover:bg-black bg-[#161b22] font-medium border-gray-600 border-2 rounded-3xl text-sm px-5 py-2.5 text-center flex flex-row items-center justify-center"
                     type="button">
                     <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-2 -ml-1" viewBox="0 0 16 16">
@@ -60,7 +60,7 @@
                     </svg>
                     <span>Follow Github</span>
                 </button>
-                <button
+                <button onclick="window.open('https://instagram.com/ketikajavan','_blank')"
                     class="w-full text-white hover:bg-black bg-[#161b22] font-medium border-gray-600 border-2 rounded-3xl text-sm px-5 py-2.5 text-center flex flex-row items-center justify-center"
                     type="button">
                     <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-2 -ml-1" viewBox="0 0 24 24">
